--- a/.github/workflows/integration_vscode.yml
+++ b/.github/workflows/integration_vscode.yml
@@ -33,7 +33,7 @@ jobs:
         node-version: [18.x, 20.x, 22.x]
 
     steps:
-      - uses: actions/@checkoutv4
+      - uses: actions/checkoutv4
       - uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
